--- a/Video 5/index.html
+++ b/Video 5/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practise website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Images</title>
 </head>
 <body>
-    This is a practise website. Paramdeep Singh Gill
-    <script src="script.js"></script>
+    <img src="image2.png" alt="Train image">
 </body>
 </html>
